<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/ps3_blue_bg">
	    
	    <!--  Screen Header-->
		<RelativeLayout android:id="@+id/header"
		    android:layout_width="fill_parent"
		    android:layout_height="90dip"
		    android:background="@drawable/header_gradient"
		    android:paddingTop="5dip"
		    android:paddingBottom="5dip">
		        
		        <ImageView
		            android:id="@+id/psn_header_logo" 
		            android:src="@drawable/psn_logo_launcher"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"/>
		        
		        <!-- Logo Start-->
		        <ImageView
		            android:id="@+id/psgamers_logo" 
		            android:src="@drawable/psgamers_logo"
		            android:layout_toRightOf="@+id/psn_header_logo"
		            android:layout_alignBottom="@+id/psn_header_logo"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dip"/>
		        
		</RelativeLayout>
	
	    <ImageView 
	        android:id="@+id/psnUserLogo"
		    android:src="@drawable/psn_user_logo_grey"
		    android:layout_below="@+id/header"
	        android:layout_width="36dip"
	        android:layout_height="36dip"
	        android:layout_marginLeft="15dip"
	        android:layout_marginTop="25dip"
		    android:contentDescription="@string/psnUserLogoDesc"/>
	    
	    <TextView 
	        android:id="@+id/emailLabel"
	        android:text="@string/email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/psnUserLogo"
	        android:layout_toRightOf="@+id/psnUserLogo"
	        android:layout_marginLeft="7dip"
	        android:textSize="20dip"
	        android:textStyle="bold" />
	    
	    <EditText 
	        android:id="@+id/emailInput"
	        android:textColor="#F5F0F2"
	        android:background="@drawable/bg_translucent_grey"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/psnUserLogo"
	        android:layout_alignLeft="@+id/psnUserLogo"
	        android:singleLine="true"
	        android:layout_marginTop="3dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="15dip" />
	    
	    <ImageView 
	        android:id="@+id/psnPasswordLogo"
		    android:src="@drawable/lock_icon"
	        android:layout_width="36dip"
	        android:layout_height="36dip"
	        android:layout_below="@+id/emailInput"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="15dip"
		    android:contentDescription="@string/psnPasswordLogoDesc"/>
	    
	    <TextView 
	        android:id="@+id/passwordLabel"
	        android:text="@string/password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/psnPasswordLogo"
	        android:layout_toRightOf="@+id/psnPasswordLogo"
	        android:layout_marginLeft="7dip"
	        android:textSize="20dip"
	        android:textStyle="bold" />
	    
	    <EditText 
	        android:id="@+id/passwordInput"
	        android:textColorHint="#D1CDCF"
	        android:textColor="#F5F0F2"
	        android:background="@drawable/bg_translucent_grey"
	        android:layout_width="fill_parent"	
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/psnPasswordLogo"
	        android:layout_alignLeft="@+id/psnPasswordLogo"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:layout_marginTop="3dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="15dip" />
	    
	    <CheckBox 
	        android:id="@+id/rememberEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rememberEmail"
	        android:layout_below="@+id/passwordInput"
	        android:layout_alignLeft="@+id/emailInput"
	        android:layout_marginTop="10dip"/>
	    
	    <TextView 
	        android:id="@+id/useAnotherAccount"
	        android:text="@string/useAnotherAccount"
	        android:autoLink="all"
	        android:clickable="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/rememberEmail"
	        android:layout_alignLeft="@+id/rememberEmail"
	        android:layout_marginTop="10dip"
	        android:textSize="20dip"
	        android:textStyle="bold"
	        android:textColor="@color/link_color"/>
	    
	    <Button
	        android:id="@+id/submitLogin"
	        android:background="@drawable/bg_translucent_black"
	        android:layout_width="fill_parent"
	        android:textColor="#F5F0F2"
	        android:textStyle="bold"
	        android:textSize="15dip"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/rememberEmail"
	        android:layout_alignLeft="@+id/emailInput"
	        android:layout_marginRight="15dip"
	        android:layout_marginTop="20dip"
	        android:text="@string/login"/>
	
	</RelativeLayout>
	
</ScrollView>	