<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ps3_black_bg">
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:id="@+id/dividerTop"
            android:background="@drawable/list_divider_bl"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="10dip" />
        
        <LinearLayout
            android:id="@+id/gameContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
		    android:layout_below="@+id/dividerTop"
            android:orientation="horizontal">
            
	        <ImageView 
		        android:id="@+id/gameImage"
		        android:layout_width="108dip"
		        android:layout_height="72dip"
			    android:layout_marginLeft="10dip"
			    android:contentDescription="@string/psnAvatarDesc"/>
	        
	        <TextView
		        android:id="@+id/gameTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dip"
		        android:textSize="20dip"
		        android:textStyle="bold"
		        android:layout_marginRight="10dip"
		        android:textColor="#F5F0F2" />
            
        </LinearLayout>
        
        <TextView 
            android:id="@+id/dividerBottom"
            android:background="@drawable/list_divider_bl"
            android:layout_width="fill_parent"
            android:layout_below="@+id/gameContainer"
            android:layout_height="1dip"
            android:layout_margin="10dip" />
        
        <ImageView 
	        android:id="@+id/trophyImageDetails"
	        android:layout_width="96dip"
	        android:layout_height="96dip"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/dividerBottom"
	        android:layout_marginTop="10dip"
		    android:contentDescription="@string/psnAvatarDesc"/>
        
        <TextView
	        android:id="@+id/trophyTitleDisplay"
	        android:text="@string/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dip"
	        android:layout_below="@+id/trophyImageDetails"
	        android:textSize="16dip"
	        android:textStyle="bold"
	        android:textColor="#B0BFD1" />
        
        <TextView
	        android:id="@+id/trophyTitleDetails"
	        android:layout_marginRight="10dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/trophyTitleDisplay"
	        android:layout_toRightOf="@+id/trophyTitleDisplay"
	        android:textSize="16dip"
	        android:textColor="#CFCACB" />
        
        <TextView
	        android:id="@+id/trophyGradeDisplay"
	        android:text="@string/grade"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dip"
	        android:layout_below="@+id/trophyTitleDisplay"
	        android:textSize="16dip"
	        android:textStyle="bold"
	        android:textColor="#B0BFD1" />
        
        <ImageView 
	        android:id="@+id/trophyTypeDetails"
	        android:layout_width="24dip"
	        android:layout_height="24dip"
	        android:layout_alignTop="@+id/trophyGradeDisplay"
	        android:layout_toRightOf="@+id/trophyGradeDisplay"
		    android:contentDescription="@string/psnAvatarDesc"/>
        
        <TextView
	        android:id="@+id/trophyGradeDetails"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dip"
	        android:layout_alignTop="@+id/trophyGradeDisplay"
	        android:layout_toRightOf="@+id/trophyTypeDetails"
	        android:textSize="16dip"
	        android:textColor="#CFCACB" />
        
        <TextView
	        android:id="@+id/trophyEarnedDisplay"
	        android:text="@string/earned"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dip"
	        android:layout_below="@+id/trophyGradeDisplay"
	        android:textSize="16dip"
	        android:textStyle="bold"
	        android:textColor="#B0BFD1" />
        
        <TextView
	        android:id="@+id/trophyEarnedTimestamp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/trophyEarnedDisplay"
	        android:layout_toRightOf="@+id/trophyEarnedDisplay"
	        android:textSize="16dip"
	        android:layout_marginRight="5dip"
	        android:textColor="#CFCACB" />
        
        <TextView
	        android:id="@+id/trophyDetailsDisplay"
	        android:text="@string/details"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dip"
	        android:layout_below="@+id/trophyEarnedDisplay"
	        android:textSize="16dip"
	        android:textStyle="bold"
	        android:textColor="#B0BFD1" />
        
        <TextView
	        android:id="@+id/trophyDetails"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dip"
	        android:layout_alignTop="@+id/trophyDetailsDisplay"
	        android:layout_toRightOf="@+id/trophyDetailsDisplay"
	        android:textSize="16dip"
	        android:textColor="#CFCACB"
	        android:layout_marginBottom="30dip" />
        
    </RelativeLayout>

</ScrollView>